<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pointiq_all_tournaments_description">Manage tournaments stored on this device and restore cloud tournaments.</string>
    <string name="all_tournaments_page_title">All Tournaments</string>
    <string name="pointiq_all_tournaments_local_section">Your Tournaments</string>
    <string name="pointiq_all_tournaments_cloud_section">Cloud Tournaments</string>
    <string name="pointiq_restore_action">Restore</string>
</resources>

